[package]
name = "security-lock"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
hmac = "0.12"
argon2 = "0.5"
sha2 = "0.10"
hkdf = "0.12"
rand = "0.9.0"
rand_core = "0.9"
clap = { version = "4.4", features = ["derive"] }
chacha20poly1305 = "0.10"
rpassword = "7.3"
pqcrypto-mlkem = "0.1.1"
pqcrypto-traits = "0.3.5"

# for debugging
hex = "0.4"
