[package]
name = "security-lock"
version = "0.1.0"
edition = "2021"

[dependencies]
# General
tokio = { version = "1.40", features = ["full"] }
rand = "0.9.0"
rand_core = "0.9"
clap = { version = "4.4", features = ["derive"] }
rpassword = "7.3"
dirs-next = "2"

# Crypto
hmac = "0.12"
argon2 = "0.5"
sha2 = "0.10"
hkdf = "0.12"
chacha20poly1305 = "0.10"
pqcrypto-mlkem = "0.1.1"
pqcrypto-traits = "0.3.5"

# for debugging
hex = "0.4"
